--- a/backend/web/index.html
+++ b/backend/web/index.html
@@ -222,11 +222,6 @@
 
             <div class="grid md:grid-cols-5 gap-3">
               <div class="field">
-                <label class="text-base font-semibold">客戶</label>
-                <input id="receiptAddVendor" class="input" placeholder="例：moxa, BNG">
-              </div>
-
-              <div class="field">
                 <label class="text-base font-semibold">單號</label>
                 <input id="receiptAddOrder" class="input" placeholder="例:25123456">
               </div>
@@ -321,15 +316,11 @@
             </div>
 
             <div class="field">
-              <input id="receiptSearchVendor" class="input" placeholder="客戶">
-            </div>
-
-            <div class="field">
               <input id="receiptSearchOrder" class="input" placeholder="單號">
             </div>
 
             <div class="field">
-              <input id="receiptSearchDatecode" class="input" placeholder="datecode">
+              <input id="receiptSearchDatecode" class="input" placeholder="收料類型">
             </div>
 
             <div class="field">
@@ -352,14 +343,12 @@
                 <tr>
                   <th class="py-2 pr-4">日期</th>
                   <th class="py-2 pr-4">治具</th>
-                  <th class="py-2 pr-4">客戶</th>
                   <th class="py-2 pr-4">單號</th>
-                  <th class="py-2 pr-4">來源</th>
+                  <th class="py-2 pr-4">收料類型</th>
                   <th class="py-2 pr-4">Datecode</th>
                   <th class="py-2 pr-4">序號</th>
                   <th class="py-2 pr-4">操作人員</th>
                   <th class="py-2 pr-4">備註</th>
-                  <th class="py-2 pr-4">編輯</th> <!-- ★ 新增 -->
                 </tr>
                 </thead>
               <tbody id="receiptTable"></tbody>
@@ -396,11 +385,6 @@
           <div id="returnAddForm" class="border rounded-2xl p-4 bg-blue-50 space-y-3">
 
             <div class="grid md:grid-cols-5 gap-4">
-              <div class="field">
-                <label class="text-base font-semibold">客戶</label>
-                <input id="returnAddVendor" class="input" placeholder="例：moxa, BNG">
-              </div>
-
               <div class="field">
                 <label class="text-base font-semibold">單號</label>
                 <input id="returnAddOrder" class="input" placeholder="例:25123456">
@@ -503,15 +487,11 @@
             </div>
 
             <div class="field">
-              <input id="returnSearchVendor" class="input" placeholder="客戶">
-            </div>
-
-            <div class="field">
               <input id="returnSearchOrder" class="input" placeholder="單號">
             </div>
 
             <div class="field">
-              <input id="returnSearchDatecode" class="input" placeholder="datecode">
+              <input id="returnSearchDatecode" class="input" placeholder="退料類型">
             </div>
 
             <div class="field">
@@ -534,14 +514,12 @@
                 <tr>
                   <th class="py-2 pr-4">日期</th>
                   <th class="py-2 pr-4">治具</th>
-                  <th class="py-2 pr-4">客戶</th>
                   <th class="py-2 pr-4">單號</th>
-                  <th class="py-2 pr-4">來源</th>
+                  <th class="py-2 pr-4">退料類型</th>
                   <th class="py-2 pr-4">Datecode</th>
                   <th class="py-2 pr-4">序號</th>
                   <th class="py-2 pr-4">操作人員</th>
                   <th class="py-2 pr-4">備註</th>
-                  <th class="py-2 pr-4">編輯</th> <!-- ★ 新增 -->
                 </tr>
                 </thead>
               <tbody id="returnTable"></tbody>
@@ -624,8 +602,6 @@
                 <th class="py-2 pr-4">日期</th>
                 <th class="py-2 pr-4">類型</th>
                 <th class="py-2 pr-4">治具</th>
-                <th class="py-2 pr-4">客戶</th>
-                <th class="py-2 pr-4">來源</th>
                 <th class="py-2 pr-4">單號</th>
                 <th class="py-2 pr-4">序號</th>
                 <th class="py-2 pr-4">操作人員</th>
@@ -722,8 +698,6 @@
                     <th class="py-2 pr-4">日期</th>
                     <th class="py-2 pr-4">類型</th>
                     <th class="py-2 pr-4">治具</th>
-                    <th class="py-2 pr-4">客戶</th>
-                    <th class="py-2 pr-4">來源</th>
                     <th class="py-2 pr-4">Datecode</th>
                     <th class="py-2 pr-4">單號</th>
                     <th class="py-2 pr-4">數量</th>
