debug-20260108-收料/退料模組debug完成-/治具/機種查詢模組debug完成

--- a/backend/web/index.html
+++ b/backend/web/index.html
@@ -169,7 +169,7 @@
       <!-- 子分頁 -->
         <div class="flex gap-2">
           <button class="subtab subtab-active"
-                  onclick="showTab('rtab-receipts')"
+                  onclick="showReceiptSubTab('rtab-receipts')"
                   data-rtab="receipts">
             收料登記
           </button>
@@ -344,9 +344,9 @@
                   <th class="py-2 pr-4">日期</th>
                   <th class="py-2 pr-4">治具</th>
                   <th class="py-2 pr-4">單號</th>
-                  <th class="py-2 pr-4">收料類型</th>
-                  <th class="py-2 pr-4">Datecode</th>
-                  <th class="py-2 pr-4">序號</th>
+                  <th class="py-2 pr-4">類型</th>
+                  <th class="py-2 pr-4">來源</th>
+                  <th class="py-2 pr-4">數量</th>
                   <th class="py-2 pr-4">操作人員</th>
                   <th class="py-2 pr-4">備註</th>
                 </tr>
@@ -515,9 +515,9 @@
                   <th class="py-2 pr-4">日期</th>
                   <th class="py-2 pr-4">治具</th>
                   <th class="py-2 pr-4">單號</th>
-                  <th class="py-2 pr-4">退料類型</th>
-                  <th class="py-2 pr-4">Datecode</th>
-                  <th class="py-2 pr-4">序號</th>
+                  <th class="py-2 pr-4">類型</th>
+                  <th class="py-2 pr-4">來源</th>
+                  <th class="py-2 pr-4">數量</th>
                   <th class="py-2 pr-4">操作人員</th>
                   <th class="py-2 pr-4">備註</th>
                 </tr>
@@ -698,7 +698,7 @@
                     <th class="py-2 pr-4">日期</th>
                     <th class="py-2 pr-4">類型</th>
                     <th class="py-2 pr-4">治具</th>
-                    <th class="py-2 pr-4">Datecode</th>
+                    <th class="py-2 pr-4">類型</th>
                     <th class="py-2 pr-4">單號</th>
                     <th class="py-2 pr-4">數量</th>
                     <th class="py-2 pr-4">操作人員</th>
